# AutoMark

./: .env.example  .gitignore  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
ctse-mas/: pyproject.toml
ctse-mas/src/ctse_mas/: graph.py
ctse-mas/src/ctse_mas/agents/: report.py
ctse-mas/src/ctse_mas/tools/: file_writer.py  logger.py  score_calculator.py
ctse-mas/tests/: test_research.py
data/: rubric.json  submission.txt
src/ctse_mas/: __init__.py  graph.py  llm.py  state.py
src/ctse_mas/agents/: analysis.py  coordinator.py  historical.py  ingestion.py  report.py  research.py
src/ctse_mas/tools/: db_manager.py  file_reader.py  file_validator.py
src/mas/: __init__.py  api.py  config.py  graph.py  llm.py  state.py
src/mas/agents/: analysis.py  finalize.py  historical.py  ingestion.py  metadata_extraction.py  pdf_ingestion.py  report.py
src/mas/tools/: db_manager.py  file_ops.py  file_writer.py  logger.py  pdf_processor.py  prompt_cache.py  summary_builder.py
tests/: test_analysis.py  test_api_batch.py  test_config.py  test_coordinator.py  test_finalize.py  test_historical.py  test_ingestion.py  test_llm_factory.py  test_llm_judge.py  test_pdf_ingestion.py  test_prompt_cache.py  test_report.py  test_summary_builder.py  test_tools.py
