[project]
name = "ctse-mas"
version = "0.1.0"
description = "Student Assignment Auto-Grader Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.2.0",
    "structlog>=25.5.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.27.2",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
