[project]
name = "ctse-mas"
version = "0.1.0"
description = "Student Assignment Auto-Grader Multi-Agent System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=1.1.6",
    "langchain-ollama>=1.1.0",
    "langchain-core>=1.2.28",
    "structlog>=25.5.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
